Fix: added ES module type and updated .env

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/quicknotes
+MONGO_URI=mongodb+srv://guptasonali4545:ZMGxZsRx5fTEZ7Lm@quicknotes.xaapr0g.mongodb.net/?retryWrites=true&w=majority&appName=QuickNotes
